--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "voladdress"
 description = "Allows for proper and easy handling of volatile memory addresses."
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Lokathor <zefria@gmail.com>"]
 repository = "https://github.com/rust-console/voladdress"
 readme = "README.md"
-keywords = ["volatile", "address"]
+keywords = ["volatile", "address", "no_std"]
 edition = "2018"
 license = "0BSD"
 
