--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Cargo.lock
 # The crt0.o file should, under the currently suggested build scheme, be
 # recompiled every build anyway.
 crt0.o
+
+.vscode/
