--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "voladdress"
 description = "Allows for proper and easy handling of volatile memory addresses."
-version = "0.2.6-alpha.0"
-authors = ["Lokathor <zefria@gmail.com>"]
+version = "0.3.0"
+authors = ["Lokathor <zefria@gmail.com>", "Thomas Winwood <twwinwood@gmail.com>"]
 repository = "https://github.com/rust-console/voladdress"
 readme = "README.md"
 keywords = ["volatile", "address", "no_std"]
@@ -12,4 +12,3 @@ license = "0BSD"
 #publish = false
 
 [dependencies]
-typenum = "1.10"
