Switch to the Zlib license
This allows the same general freedom for users who build the crate into their binary. However, Zlib is approved for use in Google projects, while 0BSD is unfortunately not.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ repository = "https://github.com/rust-console/voladdress"
 readme = "README.md"
 keywords = ["volatile", "address", "no_std"]
 edition = "2018"
-license = "0BSD"
-
-#publish = false
+license = "Zlib"
 
 [dependencies]
