--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "voladdress"
 description = "Allows for proper and easy handling of volatile memory addresses."
-version = "0.3.0"
+version = "0.3.1-alpha.0"
 authors = ["Lokathor <zefria@gmail.com>", "Thomas Winwood <twwinwood@gmail.com>"]
 repository = "https://github.com/rust-console/voladdress"
 readme = "README.md"
