--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "voladdress"
-version = "0.4.0-alpha.0"
+version = "0.4.0"
 authors = ["Lokathor <zefria@gmail.com>", "Thomas Winwood <twwinwood@gmail.com>"]
 edition = "2018"
 license = "Zlib OR Apache-2.0 OR MIT"
