--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "voladdress"
 description = "A crate for easy volatile memory abstraction."
+repository = "https://github.com/rust-console/voladdress"
 version = "0.4.1-alpha.0"
 authors = ["Lokathor <zefria@gmail.com>", "Thomas Winwood <twwinwood@gmail.com>"]
 edition = "2018"
