--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "voladdress"
 description = "A crate for easy volatile memory abstraction."
 repository = "https://github.com/rust-console/voladdress"
-version = "0.4.5"
+version = "0.4.6-alpha.0"
 authors = ["Lokathor <zefria@gmail.com>", "Thomas Winwood <twwinwood@gmail.com>"]
 edition = "2018"
 license = "Zlib OR Apache-2.0 OR MIT"
