--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ license = "Zlib OR Apache-2.0 OR MIT"
 # this feature will go away. By activating this feature you agree that you've
 # opted out of semver for this part of the crate.
 experimental_volregion = []
+
+default = ["experimental_volregion"]
